--- a/demo/demo.css
+++ b/demo/demo.css
@@ -961,7 +961,7 @@ input[type=text], input[type=password] {
 
 
   .icon-button {
-    position: absolute;
+    /* position: absolute; */
     display: flex;
     align-items: center;
     justify-content: center;
