--- a/demo/demo.css
+++ b/demo/demo.css
@@ -113,7 +113,7 @@ header {
 	color: #755eb5;
 	text-decoration: none;
 	text-transform: lowercase;
-}
+}ll
 .header-container>ul>li:hover::after {
 	height: 8px;
 }
@@ -747,35 +747,13 @@ input[type=text], input[type=password] {
     cursor: pointer;
     width: 100%;
     position: absolute;
-    right: 110px;
+    right: 10px;
   }
   
   #btnLogin:hover {
     opacity: 0.8;
   }
-  #Login {
-    background-color: #04AA6D;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    right: 124px;
-  }
   /* Extra styles for the cancel button */
-  .cancelbtn {
-    width: auto;
-    padding: 10px 18px;
-    background-color: #f44336;
-  }
-  
-  .signupbtn {
-      width: auto;
-      padding: 14px 18px;
-      background-color: #04AA6D;
-
-    }
   /* Center the image and position the close button */
   .imgcontainer {
     text-align: center;
@@ -985,7 +963,7 @@ input[type=text], input[type=password] {
   .icon-button__badge {
     position: absolute;
     top: 0.3rem;
-    right: 12.7rem;
+    right: 1rem;
     width: 25px;
     height: 25px;
     background: red;
@@ -1004,13 +982,14 @@ input[type=text], input[type=password] {
     right: 13rem;
     /* index: 2; */
     z-index: 10;
+    right: 15px;
     font-size: xxx-large;
   }
   
   #popupNoti {
     position: absolute;
     background-color: pink;
-    right: 13rem;
+    right: 2rem;
     top: 2.5rem;
     box-shadow: 0 10px 20px -5px rgba(19, 31, 51, .65);
     border-radius: 0.5rem;
